--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@ header:
 <!-----Contact Intro Section-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-5p pb-5p">
+    <div class="px-5p pt-5p">
         <div class="pb-5p">
             <p class="title-font text-2xl sm:text-4xl">We look forward to hearing from you!</p>
         </div>
@@ -46,7 +46,7 @@ header:
                 <p>For Projects and supplier enquiries, please email <a href="mailto:opportunity@ajhackett.com"><strong>opportunity@ajhackett.com</strong></a>.</p>
             </div>
             <div>
-                <form action="#" method="POST" class="space-y-4 mb-15p">
+                <form action="#" method="POST" class="space-y-4">
                     <div>
                         <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
                         <input type="text" id="name" name="name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
