--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@ pondok:
 
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pt-5p pb-10p sm:pb-0">
-    <div class="pb-2p text-center">
-        <p class="title-font text-2xl sm:text-4xl pb-2p"> A warm welcome from AJ Hackett International </p>
-        <p class="mb-2p"> Welcome to the World of Adventure with AJ Hackett! Dive into the story of the man who turned adrenaline into an empire. Discover more about AJ Hackett's journey and vision.
+    <div class="text-center">
+        <p class="title-font text-2xl sm:text-4xl pb-2p px-5p"> A warm welcome from AJ Hackett International </p>
+        <p class="mb-2p px-5p"> Welcome to the World of Adventure with AJ Hackett! Dive into the story of the man who turned adrenaline into an empire. Discover more about AJ Hackett's journey and vision.
         </p>
         <div class="mb-5p mt-5p">
           <a href="/meet-aj-hackett.html" class="button" aria-label="Learn more about AJ Hackett and his adventure journey">Find out more</a>
@@ -86,7 +86,7 @@ pondok:
 
 <!------Skypark-------->
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-5p pb-5p">
+  <div class="px-5p pt-5p">
     <div class="pb-2p">
       <p class="title-font text-2xl sm:text-4xl">Skypark by AJ Hackett</p>
     </div>
