--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -69,7 +69,7 @@ quote-image-position: 70% 10%
         </div>
 
         <div class="sm:grid sm:grid-cols-2 mb-5p">
-            <div class="sm:pr-5p pt-5p pb-10p">
+            <div class="sm:pr-5p pb-10p">
                 <p> In the commercial world, he has always preferred to leap boldly rather than to hold back. This has led to some hard lessons. The same taste for adventure that excited AJ Hackett as a child still drives the man today as he looks for new challenges and as his business moves into a period of unique growth and change.
                 </p>
             </div>
@@ -102,7 +102,7 @@ quote-image-position: 70% 10%
 
 <!-----Meet AJ Hackett with video-------->
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p grid grid-cols-1 gap-y-5 pt-5p lg:pb-10p">
+    <div class="px-5p grid grid-cols-1 gap-y-5 pt-5p pb-5p">
         <div class="col-span-full">
             <p class="title-font text-2xl sm:text-4xl"> Meet AJ Hackett </p>
         </div>
