--- a/sustainability.html
+++ b/sustainability.html
@@ -92,7 +92,7 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Cairns Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-10p mb-10p" id="cairnssustainability">
+    <div class="px-5p pt-5p mb-5p" id="cairnssustainability">
         <p class="title-font text-2xl sm:text-4xl pb-2p"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
         <div class="sm:grid sm:grid-cols-2 gap-5">
             <!-- Text Content -->
@@ -135,10 +135,10 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Beehives------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-5p pb-5p" id="beehives">
+    <div class="px-5p pt-2p pb-5p" id="beehives">
         <p class="title-font text-2xl sm:text-4xl pb-2p"> Bee Hives at Souleuvre Viaduct </p>
 
-        <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
+        <div class="sm:grid sm:grid-cols-2 gap-5">
             <!-- Image 1 -->
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.beehives-image }}" style="object-position: {{ page.beehives-position }};" alt="{{ page.beehives-alt }}" />
