--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -144,8 +144,8 @@ experience:
 
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pt-5p pb-5p sm:pb-0">
-        <p class="pb-5p sm:pb-2p"> At AJ Hackett Skypark, adventure awaits around every corner! Dive into a world of excitement with our exhilarating activities designed for thrill-seekers and families alike. Whether you’re soaring through the sky on our iconic bungy jumps, experiencing the rush of our giant swings, or gliding along breathtaking ziplines, each experience offers a unique way to challenge yourself and enjoy stunning views. Explore our sky-high attractions, including the Skybridge, Skycube, and the nostalgic Walk The Plank, or engage in fun-filled activities like luge rides, adventure parks, and climbing walls. Whatever your adrenaline level, there’s something for everyone to enjoy at AJ Hackett Skypark—come and create unforgettable memories!</p>
-        <p class="pb-5p sm:pb-0"> Check out each individual experience of Skypark by AJ Hackett below.</p>
+        <p class="pb-5p sm:pb-2p editable"> At AJ Hackett Skypark, adventure awaits around every corner! Dive into a world of excitement with our exhilarating activities designed for thrill-seekers and families alike. Whether you’re soaring through the sky on our iconic bungy jumps, experiencing the rush of our giant swings, or gliding along breathtaking ziplines, each experience offers a unique way to challenge yourself and enjoy stunning views. Explore our sky-high attractions, including the Skybridge, Skycube, and the nostalgic Walk The Plank, or engage in fun-filled activities like luge rides, adventure parks, and climbing walls. Whatever your adrenaline level, there’s something for everyone to enjoy at AJ Hackett Skypark—come and create unforgettable memories!</p>
+        <p class="pb-5p sm:pb-0 editable"> Check out each individual experience of Skypark by AJ Hackett below.</p>
   </div> 
 </section>
 
@@ -158,7 +158,7 @@ experience:
         style="background-image: url('{{ page.quote-image }}'); height: 24rem; background-position: {{ page.quote-position }};">
       <div class="absolute inset-0 flex items-center justify-center p-5p">
         <div class="bg-dark-blue p-8 rounded-lg text-center opacity-90">
-          <p class="header-font text-xl sm:text-3xl lg:text-4xl text-white">
+          <p class="header-font text-xl sm:text-3xl lg:text-4xl text-white editable">
             “I discovered from my very first jump that we were on to something incredibly special,” <br> AJ explains.
           </p>
         </div>
