--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -41,12 +41,12 @@ quote-image-position: 70% 10%
 <section class="max-w-screen-2xl mx-auto">
     <div class="px-5p pt-5p pb-10p sm:pb-0">
         <div class="pb-5p">
-            <p class="title-font text-2xl sm:text-4xl"> AJ Hackett is the kiwi innovator who built a business empire on adrenaline and adventure. </p>
+            <p class="title-font text-2xl sm:text-4xl editable"> AJ Hackett is the kiwi innovator who built a business empire on adrenaline and adventure. </p>
         </div>
 
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p pb-10p sm:pb-5p">
-                <p> From a day in 1987 when he launched himself into the world's eye by leaping off the Eiffel Tower with a rubber cord attached to his feet, AJ Hackett has gone on to become one of New Zealand's most visible and unique entrepreneurs.
+                <p class="editable"> From a day in 1987 when he launched himself into the world's eye by leaping off the Eiffel Tower with a rubber cord attached to his feet, AJ Hackett has gone on to become one of New Zealand's most visible and unique entrepreneurs.
                 </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
@@ -56,21 +56,21 @@ quote-image-position: 70% 10%
         
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:hidden pt-5p pb-10p">
-                <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ Hackett’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ Hackett is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
+                <p class="editable"> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ Hackett’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ Hackett is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
                 </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.image-2 }}" style="object-position: {{ page.image-2-position }};" alt="{{ page.image-2-alt }}" />
             </div>
             <div class="hidden sm:block pl-5p">
-                <p> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ Hackett’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ Hackett is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
+                <p class="editable"> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ Hackett’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ Hackett is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
                 </p>
             </div>
         </div>
 
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p pb-10p">
-                <p> In the commercial world, he has always preferred to leap boldly rather than to hold back. This has led to some hard lessons. The same taste for adventure that excited AJ Hackett as a child still drives the man today as he looks for new challenges and as his business moves into a period of unique growth and change.
+                <p class="editable"> In the commercial world, he has always preferred to leap boldly rather than to hold back. This has led to some hard lessons. The same taste for adventure that excited AJ Hackett as a child still drives the man today as he looks for new challenges and as his business moves into a period of unique growth and change.
                 </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
@@ -89,7 +89,7 @@ quote-image-position: 70% 10%
             style="background-image: url('{{ page.quote-image }}'); height: 24rem; background-position: {{ page.quote-image-position }};">
             <div class="absolute inset-0 flex items-center justify-center p-5p">
                 <div class="bg-dark-blue p-6 rounded-lg text-center opacity-80">
-                    <p class="header-font text-2xl sm:text-4xl lg:text-6xl text-white">Challenge life. <br> Challenge yourself.</p>
+                    <p class="header-font text-2xl sm:text-4xl lg:text-6xl text-white editable">Challenge life. <br> Challenge yourself.</p>
                 </div>
             </div>
         </div>
