--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -64,7 +64,7 @@ people:
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pt-5p">
     <div class="pb-5p">
-        <p> At AJ Hackett International, our success is built on the expertise, passion, and dedication of our remarkable team. From pioneering adventure tourism to leading innovative projects, each member of our team brings unique skills and experiences that drive our mission forward. Meet the visionaries and leaders who make our extraordinary adventures possible. From AJ Hackett, the trailblazing founder of bungy jumping, to our dynamic leaders and specialists who ensure every Skypark and experience is exceptional, our team is at the heart of everything we do. Discover more about the individuals who are shaping the future of adventure tourism and making a difference around the globe. </p>
+        <p class="editable"> At AJ Hackett International, our success is built on the expertise, passion, and dedication of our remarkable team. From pioneering adventure tourism to leading innovative projects, each member of our team brings unique skills and experiences that drive our mission forward. Meet the visionaries and leaders who make our extraordinary adventures possible. From AJ Hackett, the trailblazing founder of bungy jumping, to our dynamic leaders and specialists who ensure every Skypark and experience is exceptional, our team is at the heart of everything we do. Discover more about the individuals who are shaping the future of adventure tourism and making a difference around the globe. </p>
     </div>
     <div>
         {% for person in page.people %}
