--- a/reconciliation.html
+++ b/reconciliation.html
@@ -33,11 +33,11 @@ reconciliation-pdf: /reconciliation-ajhi.pdf
 <!---------------Reconciliation------------->
 <section class="max-w-screen-2xl mx-auto"> 
   <div class="px-5p pt-5p pb-5p">
-      <p class="title-font text-2xl sm:text-4xl pb-2p">Endorsement of Reflect RAP and Commitment to Reconciliation</p>
+      <p class="title-font text-2xl sm:text-4xl pb-2p editable">Endorsement of Reflect RAP and Commitment to Reconciliation</p>
       <div class="sm:grid sm:grid-cols-3 gap-5">
           <!-- Text Content -->
           <div class="col-span-2 sm:pr-5p">
-              <p class="pb-5p sm:pb-2p">In 2024, AJ Hackett International was endorsed by Reconciliation Australia for the launch of our ‘Reflect RAP,’ a Reconciliation Action Plan (RAP) designed to lay the foundations and prepare our workplace for reconciliation initiatives. Our respect for the Traditional Custodians begins with recognizing their care for Country and their extensive knowledge of the land developed over millennia. In Australia, Skypark Cairns and the Djapugay community provide a valuable blueprint for future Skypark by AJ Hackett businesses. This is particularly relevant due to our proximity to world heritage-listed rainforest and our commitment to acting sustainably and protecting the abundant and biodiverse ecosystem.</p>
+              <p class="pb-5p sm:pb-2p editable">In 2024, AJ Hackett International was endorsed by Reconciliation Australia for the launch of our ‘Reflect RAP,’ a Reconciliation Action Plan (RAP) designed to lay the foundations and prepare our workplace for reconciliation initiatives. Our respect for the Traditional Custodians begins with recognizing their care for Country and their extensive knowledge of the land developed over millennia. In Australia, Skypark Cairns and the Djapugay community provide a valuable blueprint for future Skypark by AJ Hackett businesses. This is particularly relevant due to our proximity to world heritage-listed rainforest and our commitment to acting sustainably and protecting the abundant and biodiverse ecosystem.</p>
               <a href="{{ page.reconciliation-pdf }}" class="underline" target="_blank">Click here to learn more about our Reconciliation Action Plan.</a>
           </div>
         <!-- Image 1 -->
