--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -162,9 +162,9 @@ site:
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pt-5p pb-5p sm:pb-0">
     <div>
-        <p class="pb-2p"> 2020 shaped up to be a year unlike any other. On top of managing a global pandemic, we celebrated our 30th birthday in both Cairns and Normandie and launched our new brand identity—Skypark by AJ Hackett.</p>
-        <p class="pb-2p"> Skypark celebrates everything that AJ Hackett is famous for: creating positively life-changing experiences through our range of gravity-defying activities while creating a destination of all-inclusive fun activities you will want to keep coming back for.</p>
-        <p> Check out each individual site to experience the many worlds of Skypark by AJ Hackett.</p>
+        <p class="pb-2p editable"> 2020 shaped up to be a year unlike any other. On top of managing a global pandemic, we celebrated our 30th birthday in both Cairns and Normandie and launched our new brand identity—Skypark by AJ Hackett.</p>
+        <p class="pb-2p editable"> Skypark celebrates everything that AJ Hackett is famous for: creating positively life-changing experiences through our range of gravity-defying activities while creating a destination of all-inclusive fun activities you will want to keep coming back for.</p>
+        <p class="editable"> Check out each individual site to experience the many worlds of Skypark by AJ Hackett.</p>
     </div>
   </div>
 </section>
