--- a/community.html
+++ b/community.html
@@ -43,7 +43,7 @@ pondok-alt:
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
   <div class="px-5p pt-5p pb-5p sm:pb-0">
-        <p class="pb-5p"> At AJ Hackett International, our commitment to community extends beyond thrilling adventures and breathtaking experiences. We deeply value the communities where we are located, recognizing the vital role they play in our success and mission. Our community-focused initiatives aim to foster meaningful connections, support local causes, and give back in impactful ways. From hosting charity events and participating in local projects to creating sustainable practices that benefit surrounding areas, we strive to make a positive difference. Discover how we are actively engaging with and contributing to the communities that inspire and support us. </p>
+        <p class="pb-5p editable"> At AJ Hackett International, our commitment to community extends beyond thrilling adventures and breathtaking experiences. We deeply value the communities where we are located, recognizing the vital role they play in our success and mission. Our community-focused initiatives aim to foster meaningful connections, support local causes, and give back in impactful ways. From hosting charity events and participating in local projects to creating sustainable practices that benefit surrounding areas, we strive to make a positive difference. Discover how we are actively engaging with and contributing to the communities that inspire and support us. </p>
   </div>
 </section>
 
@@ -51,9 +51,9 @@ pondok-alt:
 <!---------------Events------------->
 <section class="max-w-screen-2xl mx-auto"> 
   <div class="px-5p pb-2p" id="events">
-    <p class="title-font text-2xl sm:text-4xl pb-5p"> Events </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p editable"> Events </p>
 
-    <p class="title-font text-xl sm:text-2xl pb-2p"> Crazy Jump Day </p>
+    <p class="title-font text-xl sm:text-2xl pb-2p editable"> Crazy Jump Day </p>
     <div class="sm:grid sm:grid-cols-2 gap-5">
       <!-- Text Content -->
        <!-- Image 1 -->
@@ -61,10 +61,10 @@ pondok-alt:
           <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.crazy-jump-image-1 }}" style="object-position: {{ page.crazy-jump-image-1-position }};" alt="{{ page.crazy-jump-image-1-alt }}" />
       </div>
       <div class="col-span-1">
-        <p> In December 2017, Macau Tower hosted the annual Crazy Jump Day, organized by Skypark Macau Tower and sponsored by AirAsia, one of the world's leading low-cost airlines. The event, themed "AirAsia Destinations," featured 23 participants from Malaysia, Singapore, Indonesia, the Philippines, Australia, and China, who were selected through a social media contest. Participants showcased their creativity and storytelling skills through costumes that represented AirAsia's extensive network of over 130 destinations.</p>
+        <p class="editable"> In December 2017, Macau Tower hosted the annual Crazy Jump Day, organized by Skypark Macau Tower and sponsored by AirAsia, one of the world's leading low-cost airlines. The event, themed "AirAsia Destinations," featured 23 participants from Malaysia, Singapore, Indonesia, the Philippines, Australia, and China, who were selected through a social media contest. Participants showcased their creativity and storytelling skills through costumes that represented AirAsia's extensive network of over 130 destinations.</p>
       </div>
       <div class="col-span-1 sm:pr-5p">
-        <p> The event was inaugurated by key figures including AJ Hackett, Founder; Adam Lichtenstein, General Manager of Skypark Macau Tower; and Tan Sri Rafidah Aziz, AirAsia X Malaysia Chairman, along with other representatives from Macau Tower, AirAsia, and various organizations. The aim of Macau Tower Crazy Jump Day was to attract more visitors to Macau and Macau Tower, offering them the chance to experience the thrill of the world’s highest commercial bungy jump and skywalk.</p>
+        <p class="editable"> The event was inaugurated by key figures including AJ Hackett, Founder; Adam Lichtenstein, General Manager of Skypark Macau Tower; and Tan Sri Rafidah Aziz, AirAsia X Malaysia Chairman, along with other representatives from Macau Tower, AirAsia, and various organizations. The aim of Macau Tower Crazy Jump Day was to attract more visitors to Macau and Macau Tower, offering them the chance to experience the thrill of the world’s highest commercial bungy jump and skywalk.</p>
       </div>
       <!-- Image 2 -->
       <div class="relative h-full min-h-30 sm:min-h-50">
@@ -79,10 +79,10 @@ pondok-alt:
 <!---------------Giving Back------------->
 <section class="max-w-screen-2xl mx-auto"> 
   <div class="px-5p pb-5p" id="givingback">
-    <p class="title-font text-2xl sm:text-4xl pb-5p pt-5p"> Giving Back </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p pt-5p editable"> Giving Back </p>
 
 
-    <p class="title-font text-xl sm:text-2xl pb-2p"> Jump For Hope </p>
+    <p class="title-font text-xl sm:text-2xl pb-2p editable"> Jump For Hope </p>
 
 
     <div class="sm:grid sm:grid-cols-2 gap-5">
@@ -92,10 +92,10 @@ pondok-alt:
           <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.hope-image-1 }}" style="object-position: {{ page.hope-image-1-position }};" alt="{{ page.hope-image-1-alt }}"/>
       </div>
       <div class="col-span-1">
-        <p>Jump for Hope is a brand platform for Skypark by AJ Hackett dedicated to raising funds and awareness for charities. Typically a single-day event, Jump for Hope focuses on supporting a chosen charity. In Australia, for instance, we selected bushfire relief for wildlife in 2020 and partnered with The Rescue Collective. During this event, we donated A$50 (HKD$255) from every bungy and giant swing at Skypark Cairns. Additional fundraising activities included raffles, donation cups at reception and the cafe, and selling charity merchandise.</p>
+        <p class="editable">Jump for Hope is a brand platform for Skypark by AJ Hackett dedicated to raising funds and awareness for charities. Typically a single-day event, Jump for Hope focuses on supporting a chosen charity. In Australia, for instance, we selected bushfire relief for wildlife in 2020 and partnered with The Rescue Collective. During this event, we donated A$50 (HKD$255) from every bungy and giant swing at Skypark Cairns. Additional fundraising activities included raffles, donation cups at reception and the cafe, and selling charity merchandise.</p>
       </div>
       <div class="col-span-1 sm:pr-5p">
-        <p>These events allowed us to engage with a new customer segment and make a meaningful impact in our community. The funds raised for The Rescue Collective were used to help save Australia’s severely impacted koala population. It also provided a fantastic opportunity for the charity to join the event, educate our customers about their vital work, and create a connection to wildlife conservation through brochures, wildlife exhibits, and entertaining activities for children.</p>
+        <p class="editable">These events allowed us to engage with a new customer segment and make a meaningful impact in our community. The funds raised for The Rescue Collective were used to help save Australia’s severely impacted koala population. It also provided a fantastic opportunity for the charity to join the event, educate our customers about their vital work, and create a connection to wildlife conservation through brochures, wildlife exhibits, and entertaining activities for children.</p>
       </div>
       <!-- Image 2 -->
       <div class="relative h-full min-h-30 sm:min-h-50">
@@ -104,7 +104,7 @@ pondok-alt:
     </div>
 
 
-    <p class="title-font text-xl sm:text-2xl pb-2p pt-5p"> Food Forest </p>
+    <p class="title-font text-xl sm:text-2xl pb-2p pt-5p editable"> Food Forest </p>
 
     <div class="sm:grid sm:grid-cols-2 gap-5">
       <!-- Text Content -->
@@ -113,7 +113,7 @@ pondok-alt:
           <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.pondok }}" style="object-position: {{ page.pondok-position }};" alt="{{ page.pondok-alt }}"/>
       </div>
       <div class="col-span-1">
-        <p>At Pondok Santi Estate, the team is cultivating a “food forest.” This project is expected to produce such an abundance of food that we will be able to donate fruits and vegetables to local communities on Gili Trawangan and in Lombok.</p>
+        <p class="editable">At Pondok Santi Estate, the team is cultivating a “food forest.” This project is expected to produce such an abundance of food that we will be able to donate fruits and vegetables to local communities on Gili Trawangan and in Lombok.</p>
       </div>
     </div>
   </div>
