--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@ gallery-images:
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
     <div class="px-5p pt-5p pb-5p sm:pb-0">
-        <p> At AJ Hackett International, we're always pushing the boundaries of adventure and striving to enhance our offerings. We're excited to share some of our latest projects that are set to elevate the Skypark experience even further. From innovative upgrades to thrilling new features, we are dedicated to continually improving our sites to ensure that every visit is unforgettable. Here’s a look at what we’ve been working on and how we’re bringing new dimensions of excitement and comfort to our adventure parks around the globe. </p>
+        <p class="editable"> At AJ Hackett International, we're always pushing the boundaries of adventure and striving to enhance our offerings. We're excited to share some of our latest projects that are set to elevate the Skypark experience even further. From innovative upgrades to thrilling new features, we are dedicated to continually improving our sites to ensure that every visit is unforgettable. Here’s a look at what we’ve been working on and how we’re bringing new dimensions of excitement and comfort to our adventure parks around the globe. </p>
     </div>
 </section>
 
@@ -55,29 +55,29 @@ gallery-images:
 <!---------------Skypark Cairns Roof------------->
 <section class="max-w-screen-2xl mx-auto"> 
     <div class="px-5p pt-5p pb-5p">
-        <p class="title-font text-2xl sm:text-4xl pb-5p">Skypark Cairns Roof </p>
+        <p class="title-font text-2xl sm:text-4xl pb-5p editable">Skypark Cairns Roof </p>
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-roof-image }}" style="object-position: {{ page.cairns-roof-position }};" alt="{{ page.cairns-roof-alt }}" />
             </div>
             <div class="sm:pl-5p">
-                <p class="py-5p"> In 2023, Skypark Cairns underwent renovations at the top of the tower. After four years of COVID, it was time to bring some changes to our site. </p>
-                <p> The aim of this project was to enhance the overall experience on the tower by providing better shelter for patrons and an amazing viewing area from the roof with uninterrupted vistas of the rainforest and the Great Barrier Reef. Additionally, we improved our Jump Menu offerings with a flat launch platform on the roof and introduced a brand-new Back Jump area, offering new thrills for all our customers to enjoy. </p>
+                <p class="py-5p editable"> In 2023, Skypark Cairns underwent renovations at the top of the tower. After four years of COVID, it was time to bring some changes to our site. </p>
+                <p class="editable"> The aim of this project was to enhance the overall experience on the tower by providing better shelter for patrons and an amazing viewing area from the roof with uninterrupted vistas of the rainforest and the Great Barrier Reef. Additionally, we improved our Jump Menu offerings with a flat launch platform on the roof and introduced a brand-new Back Jump area, offering new thrills for all our customers to enjoy. </p>
             </div>
         </div>
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p">
-                <p class="py-5p"> Located in the far north of Queensland, our site faces unique challenges, with the wet season being the most unpredictable, as well as the heat and humidity factors to contend with. </p>
-                <p class="pb-5p"> Halfway through the project, the weather took a turn for the worse, and we were hit with a cyclone followed by a year's worth of rain in just two days! We had to put the project on hold until the weather improved nearly a month later. This delayed our project timeline by nearly two months, but we got there in the end and now have an amazing product to share with the world! </p>
-                <p class="sm:hidden">The photo above shows us tying everything down before the cyclone.</p>
-                <p class="hidden sm:block">The photo to the right shows us tying everything down before the cyclone.</p>
+                <p class="py-5p editable"> Located in the far north of Queensland, our site faces unique challenges, with the wet season being the most unpredictable, as well as the heat and humidity factors to contend with. </p>
+                <p class="pb-5p editable"> Halfway through the project, the weather took a turn for the worse, and we were hit with a cyclone followed by a year's worth of rain in just two days! We had to put the project on hold until the weather improved nearly a month later. This delayed our project timeline by nearly two months, but we got there in the end and now have an amazing product to share with the world! </p>
+                <p class="sm:hidden editable">The photo above shows us tying everything down before the cyclone.</p>
+                <p class="hidden sm:block editable">The photo to the right shows us tying everything down before the cyclone.</p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-cyclone-image }}" style="object-position: {{ page.cairns-cyclone-position }};" alt="{{ page.cairns-cyclone-alt }}" />
             </div>
         </div>
         <div>
-            <p class="pb-5p"> During this project, we used local engineers and builders to complete the work, managing to minimize disruptions to the business by splitting shifts. We worked in the mornings and stayed open in the afternoons so our customers could still enjoy our activities. </p>
+            <p class="pb-5p editable"> During this project, we used local engineers and builders to complete the work, managing to minimize disruptions to the business by splitting shifts. We worked in the mornings and stayed open in the afternoons so our customers could still enjoy our activities. </p>
         </div>
         <!-- Gallery Images -->
         <div class="sm:grid sm:grid-cols-4 gap-1 w-full" id="lightgallery">
