Updated 1 file via CloudCannon.

--- a/community.html
+++ b/community.html
@@ -24,19 +24,19 @@ header:
    title: Community
    text: "Rooted in Community: Engaging and Giving Back"
 crazy-jump-image-1: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
-crazy-jump-image-1-position:
+crazy-jump-image-1-position: 50% 50%
 crazy-jump-image-1-alt:
 crazy-jump-image-2: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
-crazy-jump-image-2-position:
+crazy-jump-image-2-position: 50% 50%
 crazy-jump-image-2-alt:
 hope-image-1: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
-hope-image-1-position:
+hope-image-1-position: 50% 50%
 hope-image-1-alt:
 hope-image-2: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
-hope-image-2-position:
+hope-image-2-position: 50% 50%
 hope-image-2-alt:
 pondok: /images/aj-hackett-bungy-eiffel-tower-paris-france.png
-pondok-position:
+pondok-position: 50% 50%
 pondok-alt:
 ---
 
