--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -145,7 +145,7 @@ experience:
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pt-5p pb-5p sm:pb-0">
         <p class="pb-5p sm:pb-2p editable"> At AJ Hackett Skypark, adventure awaits around every corner! Dive into a world of excitement with our exhilarating activities designed for thrill-seekers and families alike. Whether you’re soaring through the sky on our iconic bungy jumps, experiencing the rush of our giant swings, or gliding along breathtaking ziplines, each experience offers a unique way to challenge yourself and enjoy stunning views. Explore our sky-high attractions, including the Skybridge, Skycube, and the nostalgic Walk The Plank, or engage in fun-filled activities like luge rides, adventure parks, and climbing walls. Whatever your adrenaline level, there’s something for everyone to enjoy at AJ Hackett Skypark—come and create unforgettable memories!</p>
-        <p class="pb-5p sm:pb-0 editable"> Check out each individual experience of Skypark by AJ Hackett below.</p>
+        <p class="editable"> Check out each individual experience of Skypark by AJ Hackett below.</p>
   </div> 
 </section>
 
@@ -197,7 +197,7 @@ experience:
         {% endif %}
 
         <!-- Description -->
-        <p class="pt-5p sm:pt-5p lg:pt-2p">{{ item.description }}</p>
+        <p class="pt-2p">{{ item.description }}</p>
 
         <!-- Location Links 
         <h4 class="uppercase text-2xl py-5p sm:py-2p">
